more css updates

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ c<!DOCTYPE html>
 				<aside class="tab-content scrollflow -slide-right -opacity" id="bio">
 					<p>Hello, my name is <strong>Farishta Haider</strong>.</br>
 						A <strong>Full-Stack Developer</strong> with a strong background in <strong> Marketing </strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
-						<div class="links scrollflow"><a href="https://drive.google.com/open?id=0B9BDSYdQ3pr8b3RvRElWRE5nR1k" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
+						<div class="links scrollflow"><a href="https://goo.gl/dd4P19" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
 							<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-paper-plane"></i> Hire Me</a>
 						</div>
 					</div>
@@ -589,12 +589,12 @@ c<!DOCTYPE html>
 <section id="resume">
 	<div class="holder">
 		<div class="title scrollflow -slide-top -opacity"><h2>Portfolio</h2></div>
-			<div class="toggles">
-				<button class="current button fade-in" id='showall'>Show All</button>
-				<button class="button fade-in"id="web">Web Development</button>
-				<button class="button fade-in" id='marketing'>Marketing</button>
-				<!-- <button class='button fade-in four' id='graphic'>Graphic Design</button> -->
-				<!-- <button class='button fade-in four' id='social'>Social Media</button> -->
+			<div class="toggles links scrollflow">
+				<button class="current button fade-in links scrollflow" id='showall'>Show All</button>
+				<button class="button fade-in links scrollflow"id="web">Web Development</button>
+				<button class="button fade-in links scrollflow" id='marketing'>Marketing</button>
+				<!-- <button class='button fade-in four scrollflow' id='graphic'>Graphic Design</button> -->
+				<!-- <button class='button fade-in four scrollflow' id='social'>Social Media</button> -->
 			</div>
 			<div class="gallery_containers">
 				<div class="project">
@@ -638,8 +638,8 @@ c<!DOCTYPE html>
 						<p1> Do you ever feel down in the dumps and need a quick cheer me up? Well then, Cheerie is the app for you. This delightful application was my second project for WDI. It is written in <strong> Ruby on Rails</strong></p1></br>
 						<p1> I chose this subject matter because I personally go to looks at gifs to cheer myself up and wanted to share this system to others to assist in turning their frowns upside down. </p1></br>
 						<div class="links scrollflow">
-							<a href="https://github.com/LaFrish/Cheerie", target= '_blank', class="button"><i class="fa fa-github"></i> Github Repo</a>
-							<a href="http://cheerie.herokuapp.com/", target= '_blank', class="button"><i class="fa fa-globe"></i> Cheerie Site</a></div>
+							<a href="https://github.com/LaFrish/Cheerie", target= '_blank', class="button"><i class="fa fa-github"></i>Github Repo</a>
+							<a href="http://cheerie.herokuapp.com/", target= '_blank', class="button"><i class="fa fa-globe"></i>Cheerie Site</a></div>
 					</div>
 				</div>
 			</div>
@@ -664,7 +664,7 @@ c<!DOCTYPE html>
 						<p1> iCare is a web application that assists residents in the DC Metro area find volunteer events and share volunteer stories. iCare was created with a <strong>Ruby on Rails backend and AngularJS Frontend</strong>.</p1></br>
 						<p1>This was a group project created by Alexa Klien, Brittany Branson and I. My contribtion to the project was the event portion of the site.</p1></br>
 						<div class="links scrollflow">
-							<a href="https://github.com/aklein916/iCare-Volunteer-Project", target= '_blank', class="button"><i class="fa fa-github"></i> Github Repo</a>
+							<a href="https://github.com/aklein916/iCare-Volunteer-Project", target= '_blank', class="button"><i class="fa fa-github"></i>Github Repo</a>
 							<a href="https://icare-volunteer-app.herokuapp.com/", target= '_blank', class="button"><i class="fa fa-globe"></i>iCare Site</a>
 						</div>
 					</div>
