Nav Hamburger now is fixed throughout page

--- a/index.html
+++ b/index.html
@@ -55,45 +55,45 @@ c<!DOCTYPE html>
 		'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 	})(window,document,'script','dataLayer','GTM-PXCWVZ');</script>
 	<!-- End Google Tag Manager -->
+	<header class="close">
+	  <nav class="nav">
+	    <div class="container">
+	      <div class="menu-bg"></div>
+	      <div class="menu-burger">☰</div>
+	      <div class="menu-items">
+	        <div><a href="#welcome">Home</a></div>
+	        <div><a href="#about">About Me</a></div>
+	        <div><a href="#portfolio">Skills</a></div>
+	        <div><a href="#resume">Portfolio</a></div>
+	        <div><a href="#contactMe">Contact Me</a></div>
+	      </div>
+	    </div>
+	  </nav>
+	</header>
+
 	<section id="welcome">
-		<div class="skewed-bg">
-			<div class="content">
-				<header class="close">
-			<nav class="navbar navbar-default navbar-fixed-top">
-						<div class="container">
-							<div class='navbar-header'>
-						<div class="menu-bg"></div>
-						<div class="menu-burger">☰</div>
-						<div class="menu-items">
-							<div><a href="#welcome">Home</a></div>
-							<div><a href="#about">About Me</a></div>
-							<div><a href="#portfolio">Skills</a></div>
-							<div><a href="#resume">Portfolio</a></div>
-							<div><a href="#contactMe">Contact Me</a></div>
-						</div>
-						</div>
-						</div>
-					</nav>
-			</header>
-			<div class="welcome">
-				<i class="logo fade-in one"></i>
-				<h1 class="fade-in two">Hello, <strong>World</strong></h1>
-				<p class="fade-in three" "text">I am <strong>Farishta Haider</strong>.</br>
-					A <strong>Full Stack Developer,</strong> </br>who loves
-					<span class="rw-words rw-words-1"><span>tech.</span>
-					<span>web development.</span>
-					<span>pop culture.</span>
-					<span>marketing.</span>
-					<span>social media.</span>
-					<span>gifs.</span>
-				</span></p>
-				<p><a href="#about" class="button fade-in four">Welcome to me</a></p>
-				<div class="scroll-down clear"><i class="fa fa-angle-double-down animated infinite bounce"></i>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
+	  <div class="skewed-bg">
+	    <div class="content">
+	      <div class="welcome">
+	        <i class="logo fade-in one"></i>
+	        <h1 class="fade-in two">Hello, <strong>World</strong></h1>
+	        <p class="fade-in three" "text">I am <strong>Farishta Haider</strong>.</br>
+	          A <strong>Full Stack Developer,</strong> </br>who loves
+	          <span class="rw-words rw-words-1"><span>tech.</span>
+	          <span>web development.</span>
+	          <span>pop culture.</span>
+	          <span>marketing.</span>
+	          <span>social media.</span>
+	          <span>gifs.</span>
+	          </span>
+	        </p>
+	        <p><a href="#about" class="button fade-in four">Welcome to me</a></p>
+	        <div class="scroll-down clear"><i class="fa fa-angle-double-down animated infinite bounce"></i>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	</section>
 <section id="about">
 	<div class="bg-image"></div>
 	<div class="holder">
