--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-c<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Farishta Haider</title>
@@ -113,8 +113,6 @@ c<!DOCTYPE html>
 							<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-paper-plane"></i> Hire Me</a>
 						</div>
 					</div>
-					<!-- </div>
-				</div> -->
 			</aside>
 			<aside class="education tab-content"  id="education">
 				<div class="row">
@@ -246,10 +244,6 @@ c<!DOCTYPE html>
 </aside>
 <aside class="testimonial tab-content"  id="testimonials">
 	<div class="holder">
-		<!-- <div class="title scrollflow -slide-top -opacity"><h2>Skills</h2></div> -->
-		<!-- <div class="testimonial scrollflow -slide-top -opacity"> -->
-
-		<!-- <div class="wrapper"> -->
 		<ul class="bxslider">
 			<li>
 				<div>
@@ -279,8 +273,6 @@ c<!DOCTYPE html>
 				</li>
 			</ul>
 		</div>
-		<!-- </div>
-	</div> -->
 </section>
 <section id="portfolio">
 	<div class="holder">
@@ -779,6 +771,5 @@ c<!DOCTYPE html>
 <script type="text/javascript" src="javascripts/jquery.scrollflow.min.js"></script>
 <script type="text/javascript" src="javascripts/jquery.easing.1.3.js"></script>
 <script type="text/javascript" src="javascripts/jquery.bxslider.min.js"></script>
-
 </body>
 </html>
