--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link href="stylesheets/jquery.bxslider.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Arapey|Bitter|Cutive|Cutive+Mono|Gravitas+One|Inconsolata|Josefin+Sans|Muli|Open+Sans|Petit+Formal+Script|Playfair+Display|Pontano+Sans|Prata|Raleway|Roboto|Roboto+Mono|Rubik|Sacramento|Source+Code+Pro|Vidaloka" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="http://tympanus.net/Tutorials/CircleHoverEffects/css/common.css" />
-	<link rel="stylesheet" type="text/css" href="http://tympanus.net/Tutorials/CircleHoverEffects/css/style.css" />
+	<link rel="stylesheet" type="text/css" href="http://tympanus.net/Tutorials/CircleHoverEffects/css/common.css"/>
+	<link rel="stylesheet" type="text/css" href="http://tympanus.net/Tutorials/CircleHoverEffects/css/style.css"/>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 	<script type="text/javascript" src="javascripts/modernizr.custom.79639.js"></script>
 	<script type="text/javascript" src="http://tympanus.net/Tutorials/CircleHoverEffects/js/modernizr.custom.79639.js"></script>
-	<script type="text/javascript" src="fonts/fontsmoothie.min.js" async></script>
+	<script type="text/javascript" src="fonts/fontsmoothie.min.js"></script>
 	<script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -77,7 +77,7 @@
 				<div class="welcome">
 					<i class="logo fade-in one"></i>
 					<h1 class="fade-in two">Hello, <strong>World</strong></h1>
-					<p class="fade-in three" "text">I am <strong>Farishta Haider</strong>.</br>
+					<p class="fade-in three">I am <strong>Farishta Haider</strong>.</br>
 						A <strong>Full Stack Developer,</strong> </br>who loves
 						<span class="rw-words rw-words-1"><span>tech.</span>
 						<span>web development.</span>
