Added Protrakr and MMG Trivia Game to portfolio

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 				<aside class="tab-content scrollflow -slide-right -opacity" id="bio">
 					<p>Hello, my name is <strong>Farishta Haider</strong>.</br>
 						A <strong>Full-Stack Developer</strong> with a strong background in <strong> Marketing </strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
-						<div class="links scrollflow"><a href="https://goo.gl/dd4P19" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
+						<div class="links scrollflow"><a href="https://drive.google.com/file/d/0B9BDSYdQ3pr8R0pZcnJGQ0pnbFk/view?usp=sharing" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
 							<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-paper-plane"></i> Hire Me</a>
 						</div>
 					</div>
@@ -471,6 +471,19 @@
 					</div>
 				</li>
 				<li>
+					<div class="ch-item react">
+						<h4>React</h4>
+						<i class="devicon-react-plain"></i>
+						<div class="ch-info-wrap">
+							<div class="ch-info">
+								<div class="ch-info-front react"><h5>Skill</br> level:</br>Beginner</h5></div>
+								<div class="ch-info-back">
+								</div>
+							</div>
+						</div>
+					</div>
+				</li>
+				<li>
 					<div class="ch-item git">
 						<h4>Git</h4>
 						<i class="devicon-git-plain"></i>
@@ -497,12 +510,25 @@
 					</div>
 				</li>
 				<li>
+					<div class="ch-item bootstrap">
+						<h4>Bootstrap</h4>
+						<i class="devicon-bootstrap-plain"></i>
+						<div class="ch-info-wrap">
+							<div class="ch-info">
+								<div class="ch-info-front bootstrap"><h5>Skill</br> level:</br>Intermediate</h5></div>
+								<div class="ch-info-back">
+								</div>
+							</div>
+						</div>
+					</div>
+				</li>
+				<li>
 					<div class="ch-item haml">
 						<h4>Haml</h4>
 						<i class="icon-haml-2"></i>
 						<div class="ch-info-wrap">
 							<div class="ch-info">
-								<div class="ch-info-front haml"><h5>Skill</br> level:</br>Beginner</h5></div>
+								<div class="ch-info-front haml"><h5>Skill</br> level:</br>Intermediate</h5></div>
 								<div class="ch-info-back">
 								</div>
 							</div>
@@ -734,6 +760,60 @@
 				<div class="links scrollflow">
 					<a href="https://drive.google.com/file/d/0B287eiUVjLsLdk8xMExWLUpMNlE/view?usp=sharing", target= '_blank', class="button"><i class="fa fa-file-powerpoint-o"></i>GEICO Bus Tour Summary</a>
 					<a href="http://www.eventmarketer.com/article/geico-takes-summer-tour-trio-mascots/", target= '_blank', class="button"><i class="fa fa-file-o"></i>Bus Article</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="gallery_containers">
+	<div class="project">
+		<div class="web showall gallery_container">
+			<img src="http://i.imgur.com/ui8VhNu.png" alt="ProTrakr">
+			<div class='project_info' onclick=''>
+				ProTrakr</br>
+				<div class="space20"></div>
+				<button class="gal_btn7 fade-in four">View Details</button>
+			</div>
+			<div class="pop7">
+				<span7>✖</span7>
+				<h6>ProTrakr</h6>
+				<!-- <div class="tech">
+				<li>HTML</li>
+				<li>CSS</li>
+				<li>JavaScript</li>
+				<li>Ruby on Rails</li></div> -->
+				<p1>  </p1></br>
+				<p1>A project management application for construction projects. </br>Written in <strong>Ruby on Rails and Haml.</strong>.</p1></br>
+				<div class="links scrollflow">
+					<!-- <a href="https://github.com/LaFrish/wdi8-yearbook", target= '_blank', class="button"><i class="fa fa-github"></i>Github Repo</a>
+					<a href="https://wdi8-yearbook.herokuapp.com/", target= '_blank', class="button"><i class="fa fa-globe"></i>WDI Yearbook</a> -->
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="gallery_containers">
+	<div class="project">
+		<div class="web marketing showall gallery_container">
+			<img src="http://i.imgur.com/luRz5yR.png" alt="Montage Marketing Trivia Game">
+			<div class='project_info' onclick=''>
+				Olympic Trivia Game</br>
+				<div class="space20"></div>
+				<button class="gal_btn8 fade-in four">View Details</button>
+			</div>
+			<div class="pop8">
+				<span8>✖</span8>
+				<h6>Trivia Game</h6>
+				<!-- <div class="tech">
+				<li>HTML</li>
+				<li>CSS</li>
+				<li>JavaScript</li>
+				<li>Ruby on Rails</li></div> -->
+				<p1> </p1></br>
+				<p1> A Trivia Game for a Olympic themed event.</br>Written in <strong>HTML CSS JavaScript jQuery</strong>.</p1></br>
+				<div class="links scrollflow">
+					<a href="https://github.com/LaFrish/Trivia", target= '_blank', class="button"><i class="fa fa-github"></i>Github Repo</a>
+					<a href="https://lafrish.github.io/Trivia/", target= '_blank', class="button"><i class="fa fa-globe"></i>Trivia Game</a>
 				</div>
 			</div>
 		</div>
