--- a/index.html
+++ b/index.html
@@ -385,7 +385,6 @@
 						<div class="ch-info-wrap">
 							<div class="ch-info">
 								<div class="ch-info-front angular"><h5>Skill</br> level:</br>Beginner</h5></div>
-								<h3></h3>
 								<div class="ch-info-back">
 								</div>
 							</div>
@@ -626,13 +625,17 @@
 					<div class="pop1">
 						<span1>✖</span1>
 						<h6>Trivia Night</h6>
-						<div class="tech-row"> TECH </div>
+						<div class="techUsed">
+							<h3> <strong>TECH:</strong> HTML <strong> | </strong> CSS <strong> | </strong> VANILLA JAVASCRIPT</h3>
+						</div>
+					</br>
 						<p1> A trivia game written in Vanilla <strong>JavaScript</strong>.</p1></br>
 						<p1> This was our first WDI project. We had a topic to choose from and were restricted from using jQuery. I chose Trivia because it was a fun game that I personally enjoy.</p1></br>
 						<p1>I have already made some updates since the project was completed but still would like to add a scoreboard and more dynanic notifiers when you get the questions correct or wrong.</p1></br>
 						<div class="links scrollflow">
 							<a href="https://github.com/LaFrish/Trivia_Night", target= '_blank', class="button"><i class="fa fa-github"></i>Github Repo</a>
 							<a href="http://lafrish.github.io/Trivia_Night/", target= '_blank', class="button"><i class="fa fa-globe"></i>Trivia Night Site</a>
+
 						</div>
 					</div>
 				</div>
@@ -650,10 +653,9 @@
 					<div class="pop2">
 						<span2>✖</span2>
 						<h6>Cheerie</h6>
-						<!-- <div class="tech">
-						<li>HTML</li>
-						<li>CSS</li>
-						<li>Ruby on Rails</li></div> -->
+						<div class="techUsed">
+							<h3> <strong>TECH:</strong> HTML <strong> | </strong> CSS <strong> | </strong> RUBY ON RAILS</h3>
+						</div></br>
 						<p1> Do you ever feel down in the dumps and need a quick cheer me up? Well then, Cheerie is the app for you. This delightful application was my second project for WDI. It is written in <strong> Ruby on Rails</strong></p1></br>
 						<p1> I chose this subject matter because I personally go to looks at gifs to cheer myself up and wanted to share this system to others to assist in turning their frowns upside down. </p1></br>
 						<div class="links scrollflow">
@@ -680,6 +682,9 @@
 							<li>CSS</li>
 							<li>Ruby on Rails</li>
 							<li>Angular</li></div> -->
+							<div class="techUsed">
+								<h3> <strong>TECH:</strong> HTML <strong> | </strong> CSS <strong> | </strong> RUBY ON RAILS (BACK-END) <strong> | </strong> ANGULAR(FRONT-END)</h3>
+							</div></br>
 							<p1> iCare is a web application that assists residents in the DC Metro area find volunteer events and share volunteer stories. iCare was created with a <strong>Ruby on Rails backend and AngularJS Frontend</strong>.</p1></br>
 							<p1>This was a group project created by Alexa Klien, Brittany Branson and I. My contribtion to the project was the event portion of the site.</p1></br>
 							<div class="links scrollflow">
@@ -707,6 +712,9 @@
 		<li>ExpressJS</li></div>
 		<li>AngularJS</li>
 		<li>NodeJS</li></div>
+		<div class="techUsed">
+			<h3> <strong>TECH:</strong> HTML <strong> | </strong> CSS <strong> | </strong> VANILLA JAVASCRIPT</h3>
+		</div></br>
 		<p1> Node Vodka is the latest and greatest vodka line that is launching this summer. To celebrate their inaugrial year, they are hosting lucky winners at their Node Beach House. The Node Beach House is the latest experiential marketing campaigns from XYZ Marketing and this  website it the accompanying microsite for the tour. Extending the reach of the event long after the tour ends. There is a sweepstakes submission page to generate lead data, a photo pick up site that can be shared socially fully branded with Node's logo and mixologist section to show the many ways you are able to enjoy the vodka of the summer. And if you can't make it to the beach house, you can live vicariously through the experience by listening to Node Radio.</p1></br>
 		<p1> For our fourth and final project, I took my past experience in marketing with a developer twist. With the opportunity to use any language of our choise, I made this as a <strong>MEAN app</strong>.</p1></br>
 		<div class="links scrollflow">
@@ -734,6 +742,9 @@
 				<li>CSS</li>
 				<li>JavaScript</li>
 				<li>Ruby on Rails</li></div> -->
+				<div class="techUsed">
+					<h3> <strong>TECH:</strong> HTML <strong> | </strong> CSS <strong> | </strong> JAVASCRIPT <strong> | </strong> RUBY ON RAILS</h3>
+				</div></br>
 				<p1> A yearbook for the Web Development Immersive Cohort 8. </p1></br>
 				<p1> A project that was just for fun to share memories with our classmates. </br>Written in <strong>Ruby on Rails.</strong>.</p1></br>
 				<div class="links scrollflow">
@@ -778,13 +789,12 @@
 			<div class="pop7">
 				<span7>✖</span7>
 				<h6>ProTrakr</h6>
-				<!-- <div class="tech">
-				<li>HTML</li>
-				<li>CSS</li>
-				<li>JavaScript</li>
-				<li>Ruby on Rails</li></div> -->
-				<p1>  </p1></br>
-				<p1>A project management application for construction projects. </br>Written in <strong>Ruby on Rails and Haml.</strong>.</p1></br>
+
+				<div class="techUsed">
+					<h3> <strong>TECH:</strong> HTML <strong> | </strong> SASS <strong> | </strong> JAVASCRIPT <strong> | </strong> RUBY ON RAILS  <strong> | </strong> HAML</h3>
+				</div></br>
+
+				<p1>A project management application for construction projects. </br>Written in <strong>Ruby on Rails and Haml</strong>.</p1></br>
 				<div class="links scrollflow">
 					<!-- <a href="https://github.com/LaFrish/wdi8-yearbook", target= '_blank', class="button"><i class="fa fa-github"></i>Github Repo</a>
 					<a href="https://wdi8-yearbook.herokuapp.com/", target= '_blank', class="button"><i class="fa fa-globe"></i>WDI Yearbook</a> -->
@@ -805,13 +815,10 @@
 			<div class="pop8">
 				<span8>✖</span8>
 				<h6>Trivia Game</h6>
-				<!-- <div class="tech">
-				<li>HTML</li>
-				<li>CSS</li>
-				<li>JavaScript</li>
-				<li>Ruby on Rails</li></div> -->
-				<p1> </p1></br>
-				<p1> A Trivia Game for a Olympic themed event.</br>Written in <strong>HTML CSS JavaScript jQuery</strong>.</p1></br>
+				<div class="techUsed">
+					<h3> <strong>TECH:</strong> HTML <strong> | </strong> CSS <strong> | </strong> VANILLA JAVASCRIPT</h3>
+				</div></br>
+				<p1> A Trivia Game for a Olympic themed event.</br>Written in <strong>HTML CSS JavaScript</strong>.</p1></br>
 				<div class="links scrollflow">
 					<a href="https://github.com/LaFrish/Trivia", target= '_blank', class="button"><i class="fa fa-github"></i>Github Repo</a>
 					<a href="https://lafrish.github.io/Trivia/", target= '_blank', class="button"><i class="fa fa-globe"></i>Trivia Game</a>
