fixed nav background on click

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	<!-- End Google Tag Manager -->
 	<header class="close">
 		<nav class="nav">
-			<div class="container">
+			<div class="container menu">
 				<div class="menu-bg"></div>
 				<div class="menu-burger">☰</div>
 				<div class="menu-items">
@@ -147,7 +147,7 @@
 		<img src="images/logo-gray.png" alt="ProTrakr Logo"></img></br>
 		<div class="brief">
 		</br>
-		<span class="company-name">Junior Front-End Developer Intern </br> June 2016 – Current</span>
+		<span class="company-name">Junior Web Developer Intern </br> June 2016 – Current</span>
 		<span class="position2">
 		</br>
 		<ul>
