Updated link for resume

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 				<aside class="tab-content scrollflow -slide-right -opacity" id="bio">
 					<p>Hello, my name is <strong>Farishta Haider</strong>.</br>
 						A <strong>Full-Stack Developer</strong> with a strong background in <strong> Marketing </strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
-						<div class="links scrollflow"><a href="https://drive.google.com/file/d/0B9BDSYdQ3pr8dWVvbFNSY1BKUms/view?usp=sharing" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
+						<div class="links scrollflow"><a href="https://drive.google.com/file/d/0B9BDSYdQ3pr8eGxDbzB5SVVKLUdyWWJONHJpTGFBYkpGdFR3/view?usp=sharing" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
 							<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-paper-plane"></i> Hire Me</a>
 						</div>
 					</div>
@@ -183,7 +183,7 @@
 	<img src="images/geico-logo.jpg" alt="GEICO logo"></img>
 	<div class="brief">
 		<span class="company-name">
-			Marketing Buyer</br>October 2012 – February 2015</span>
+			Marketing Buyer</br>July 2007 – February 2015</span>
 			<span class="position">
 			</br>
 			<ul>
@@ -194,13 +194,7 @@
 				<li>Managed focus tours to saturate markets with a specified call to action per location.</li>
 				<li>Researched, planned and implemented new social media strategies to increase impressions of events and brand.</li>
 				<li>Member of the GEICO Blog team. Writing about events, marketing and topics that can be related to GEICO.</li>
-				<li>Continued Event Marketing Coordinator responsibilities, excluding regional event coordination, in addition to new duties.</li></br>
-			</ul>
-			<span class="company-name">
-				Marketing Coordinator</br>September 2008 – October 2012</span>
-				<span class="position">
-				</br>
-				<ul>
+				<li>Continued Event Marketing Coordinator responsibilities, excluding regional event coordination, in addition to new duties.</li>
 					<li>Lead 20+ Regional Event Marketing Coordinators. Responsibilities included supporting teams with equipment, promotional products, event approval and event payment processing.</li>
 					<li>Created and maintained lead analysis program to measure ROI of events. The key learning from analysis were used in planning and evaluation of marketing strategies and programs.</li>
 					<li>Created and coordinated the email blast program to have a post-event reach with our consumers.</li>
@@ -209,11 +203,7 @@
 					<li>Planned and produced annual GEICO Public Service Awards, an award show and banquet. Coordinated all expense paid trips for winners and their families to D.C. and was their tour guide during the weekend.</li>
 					<li>Appraised regional and national team’s performance by secret shopping events throughout the year.</li>
 					<li>Managed independent sponsorships such as Live Nation, Hershey Park, Merriweather Post Pavilion and more. Included negotiating contracts, creating marketing strategies, coordinating sponsorship with teams and facilitating support to ensure the success of the program.</li>
-					<li>Continued Event Marketing Specialist responsibilities in addition to new duties.</li></br>
-					<span class="company-name">Marketing Specialist II
-					</br>July 2007 – September 2008</span>
-					<span class="position">
-					</br>
+					<li>Continued Event Marketing Specialist responsibilities in addition to new duties.</li>
 					<li>Planned, tracked and maintained $22+ million budget. Consistently improving budget spreadsheets to be multi-functional tool.</li>
 					<li>Planned and produced yearly GEICO Event Marketing Summit.</li>
 					<li>Managed promotional products for the event marketing teams. Ensuring GEICO has quality products as giveaways. Ordered over $2 million of products and maintaining online inventory.</li>
