Added Paintr to portfolio

--- a/index.html
+++ b/index.html
@@ -817,6 +817,32 @@
 		</div>
 	</div>
 </div>
+
+
+<div class="gallery_containers">
+	<div class="project">
+		<div class="web showall gallery_container">
+			<img src="http://i.imgur.com/8YqUCYh.png" alt="Paintr App">
+			<div class='project_info' onclick=''>
+				Paintr</br>
+				<div class="space20"></div>
+				<button class="gal_btn8 fade-in four">View Details</button>
+			</div>
+			<div class="pop8">
+				<span8>✖</span8>
+				<h6>Paintr</h6>
+				<div class="techUsed">
+					<h3> <strong>TECH:</strong> REACT <strong> | </strong> REDUX <strong> | </strong> CSS <strong> | </strong> HTML</h3>
+				</div></br>
+				<p1> A drawing app </br>Written in <strong>React Redux</strong>.</p1></br>
+				<div class="links scrollflow">
+					<a href="https://github.com/LaFrish/Paintr", target= '_blank', class="button"><i class="fa fa-github"></i>Github Repo</a>
+					<a href="https://lafrish.github.io/Paintr/", target= '_blank', class="button"><i class="fa fa-globe"></i>Paintr</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 </div>
 
 </section>
