Updated description of paintr app

--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
 				<div class="techUsed">
 					<h3> <strong>TECH:</strong> REACT <strong> | </strong> REDUX <strong> | </strong> CSS <strong> | </strong> HTML</h3>
 				</div></br>
-				<p1> A drawing app </br>Written in <strong>React Redux</strong>.</p1></br>
+				<p1>A drawing app</br>Written in <strong>React Redux</strong>. You are able to select 3 modes: Paint Mode, Image Stamp Mode and Eraser Mode. You are able to upload an image and stamp it onto the canvas. As well as reset the canvas or save your masterpeice to display at the Louvre. Next steps are to add Undo & Redo option, a canvas paint bucket mode, a text mode to write on the canvas and the ability to resize the stamp images.</p1></br>
 				<div class="links scrollflow">
 					<a href="https://github.com/LaFrish/Paintr", target= '_blank', class="button"><i class="fa fa-github"></i>Github Repo</a>
 					<a href="https://lafrish.github.io/Paintr/", target= '_blank', class="button"><i class="fa fa-globe"></i>Paintr</a>
