--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="stylesheets/jquery.bxslider.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Arapey|Bitter|Cutive|Cutive+Mono|Gravitas+One|Inconsolata|Josefin+Sans|Muli|Open+Sans|Petit+Formal+Script|Playfair+Display|Pontano+Sans|Prata|Raleway|Roboto|Roboto+Mono|Rubik|Sacramento|Source+Code+Pro|Vidaloka" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="http://tympanus.net/Tutorials/CircleHoverEffects/css/common.css"/>
-	<link rel="stylesheet" type="text/css" href="http://tympanus.net/Tutorials/CircleHoverEffects/css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="https://tympanus.net/Tutorials/CircleHoverEffects/css/common.css"/>
+	<link rel="stylesheet" type="text/css" href="https://tympanus.net/Tutorials/CircleHoverEffects/css/style.css"/>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
