Corrected img code

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<br>
 			<br>
 		<br>
-		<img src="images/logo-gray.png" alt="ProTrakr Logo"></img><br>
+		<img src="images/logo-gray.png" alt="ProTrakr Logo" /><br>
 		<div class="brief">
 		<br>
 		<span class="company-name">Junior Web Developer Intern <br> June 2016 – Current</span>
@@ -165,7 +165,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
 </div>
 <div class="row">
-	<img src="images/montage.png" alt="Montage Marketing Group Logo"></img><br>
+	<img src="images/montage.png" alt="Montage Marketing Group Logo" /><br>
 	<div class="brief">
 	<br>
 	<span class="company-name">Marketing Consultant<br> July 2015 – Current</span>
@@ -185,7 +185,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
 </div>
 <div class="row">
-	<img src="images/geico-logo.jpg" alt="GEICO logo"></img>
+	<img src="images/geico-logo.jpg" alt="GEICO logo" />
 	<div class="brief">
 		<span class="company-name">
 			Marketing Buyer<br>July 2007 – February 2015</span>
@@ -220,7 +220,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		</div>
 	</div>
 	<div class="row">
-		<img src="images/summitlogo.jpg" alt="Summit Marketing logo"></img>
+		<img src="images/summitlogo.jpg" alt="Summit Marketing logo" />
 		<div class="brief">
 			<span class="company-name">
 				Program Accounts Manager<br>March 2004 – May 2007</span>
@@ -603,7 +603,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<div class="title scrollflow -slide-top -opacity"><h2>Portfolio</h2></div>
 		<div class="toggles links scrollflow">
 			<button class="current button fade-in links scrollflow" id='showall'>Show All</button>
-			<button class="button fade-in links scrollflow"id="web">Web Development</button>
+			<button class="button fade-in links scrollflow" id="web">Web Development</button>
 			<button class="button fade-in links scrollflow" id='marketing'>Marketing</button>
 			<!-- <button class='button fade-in four scrollflow' id='graphic'>Graphic Design</button> -->
 			<!-- <button class='button fade-in four scrollflow' id='social'>Social Media</button> -->
