Corrected p class in span tag

--- a/index.html
+++ b/index.html
@@ -124,10 +124,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					<img src="images/university-of-maryland-logo.png" alt="University of Maryland logo">
 					<div class="brief">
 						<span class="name">University of Maryland</span>
-						<span class="position"> College Park, Maryland
-							<p> Communication Major</p>
-							<p> Bachelors of Arts & Humanities</p>
-							<p> Graduated May 2004</p>
+						<span class="position">
+							College Park, Maryland<br>
+							Communication Major<br>
+							Bachelors of Arts & Humanities<br>
+							Graduated May 2004<br>
 						</span>
 					</div>
 				</div>
@@ -137,9 +138,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 					</div>
 					<div class="brief">
 						<span class="name">General Assembly</span>
-						<span class="position">Washington, D.C.
-							<p> Web Development Immersive</p>
-							<p> February 2016 - May 2016</p>
+						<span class="position">
+							Washington, D.C.<br>
+							Web Development Immersive<br>
+							February 2016 - May 2016<br>
 						</span>
 					</div>
 				</div>
