changed logo for Tek

--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
 							<br>
 							<br>
 							<br>
-							<img src="images/tek.png" alt="TEKsystems Logo" /><br>
+							<img src="images/Tek.png" alt="TEKsystems Logo" /><br>
 							<div class="brief">
 								<br>
-								<span class="company-name">eLearning Developer<br>February 2017 - Current</span>
+								<span class="company-name">Web Developer<br>February 2017 - Current</span>
 								<span class="position2">
 									<br>
 									<ul>
