changed logo for Tek

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 							<br>
 							<br>
 							<br>
-							<img src="images/Tek.png" alt="TEKsystems Logo" /><br>
+							<img src="images/TEK.png" alt="TEKsystems Logo" /><br>
 							<div class="brief">
 								<br>
 								<span class="company-name">Web Developer<br>February 2017 - Current</span>
