updated copyright date and linked scrolldown icon

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						</span>
 					</p>
 					<p><a href="#about" class="button fade-in four">Welcome to me</a></p>
-					<div class="scroll-down clear"><i class="fa fa-angle-double-down animated infinite bounce"></i>
+					<div class="scroll-down clear"><a href="#about" class="whiteFont"><i class="fa fa-angle-double-down animated infinite bounce"></i></a>
 					</div>
 				</div>
 			</div>
@@ -147,15 +147,15 @@
 						</div>
 					</aside>
 					<aside class="experience tab-content"  id="experience">
-						<div class="row">
+						<!-- <div class="row">
 							<br>
 							<br>
 							<br>
-							<img src="images/TEK.png" alt="TEKsystems Logo" /><br>
+							<img class="tekLogo" src="images/TEK.png" alt="TEKsystems Logo" /><br>
 							<div class="brief">
-								<br>
+
 								<span class="company-name">Web Developer<br>February 2017 - Current</span>
-								<span class="position2">
+								<span class="position">
 									<br>
 									<ul>
 										<li>Develop and optimize new user-facing features.</li>
@@ -165,7 +165,8 @@
 									</ul>
 								</span>
 							</div>
-						</div>
+						</div> -->
+
 						<div class="row">
 							<br>
 							<br>
@@ -890,7 +891,7 @@
 					<a href="https://profiles.generalassemb.ly/profiles/fhaider" target="_blank"><i class="fa fa-cog"></i></a>
 				</div>
 				<a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com" class="button">Get in touch</a>
-				<div class="copy">© Copyright 2016 Farishta Haider</div>
+				<div class="copy">© Copyright 2018 Farishta Haider</div>
 			</div>
 		</section>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
