Change order of education, change skew to so line goes away

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 							<span>gifs.</span>
 						</span>
 					</p>
-					<p><a href="#about" class="button fade-in four">Welcome to me</a></p>
+					<div class="buttonContainer"><a href="#about" class="button fade-in four">Welcome to me</a></div>
 					<div class="scroll-down clear"><a href="#about" class="whiteFont"><i class="fa fa-angle-double-down animated infinite bounce"></i></a>
 					</div>
 				</div>
@@ -114,24 +114,12 @@
 					<aside class="tab-content scrollflow -slide-right -opacity" id="bio">
 						<p>Hello, my name is <strong>Farishta Haider</strong>.<br>
 							A <strong>Full-Stack Developer</strong> with a strong background in <strong> Marketing </strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
-							<div class="links scrollflow"><a href="https://drive.google.com/file/d/0B9BDSYdQ3pr8eGxDbzB5SVVKLUdyWWJONHJpTGFBYkpGdFR3/view?usp=sharing" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
+							<div class="links scrollflow"><a href="https://drive.google.com/file/d/1lc165fr8hS8StfYGYCQB9FKn1gB-ouC2/view?usp=sharing" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
 								<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-paper-plane"></i> Hire Me</a>
 							</div>
 						</div>
 					</aside>
 					<aside class="education tab-content"  id="education">
-						<div class="row">
-							<img src="images/university-of-maryland-logo.png" alt="University of Maryland logo">
-							<div class="brief">
-								<span class="name">University of Maryland</span>
-								<span class="position">
-									College Park, Maryland<br>
-									Communication Major<br>
-									Bachelors of Arts & Humanities<br>
-									Graduated May 2004<br>
-								</span>
-							</div>
-						</div>
 						<div class="row">
 							<div class="ga">
 								<img src="images/1ga_logo.jpg" alt="General Assembly Logo">
@@ -145,6 +133,19 @@
 								</span>
 							</div>
 						</div>
+						<div class="row">
+							<img src="images/university-of-maryland-logo.png" alt="University of Maryland logo">
+							<div class="brief">
+								<span class="name">University of Maryland</span>
+								<span class="position">
+									College Park, Maryland<br>
+									Communication Major<br>
+									Bachelors of Arts & Humanities<br>
+									Graduated May 2004<br>
+								</span>
+							</div>
+						</div>
+
 					</aside>
 					<aside class="experience tab-content"  id="experience">
 						<!-- <div class="row">
@@ -194,14 +195,16 @@
 								<span class="position">
 									<br>
 									<ul>
-										<li>Setup and monitor analytic dashboards and supporting programs.</li>
-										<li>Develop SEO strategies, implement and monitor campaigns.</li>
-										<li>Perform site analysis, keyword research, site mapping and assess link building opportunities.</li>
-										<li>Develop, manage and grow the company’s social media platforms.</li>
-										<li>Research content for outbound social media posts.</li>
-										<li>Create Social Content Database to optimally manage and organize the social program.</li>
-										<li>Create graphics and designs for social media platforms and presentations.</li>
-										<li>Maintain the company’s website; adding features to increase online engagement.</li>
+										<li>Setup and monitored analytic dashboards and supporting programs.</li>
+										<li>Developed SEO strategies, implemented and monitored campaigns.</li>
+										<li>Performed site analysis, keyword research, site mapping and assess link building opportunities.</li>
+										<li>Developed, managed and grew the company’s social media platforms.</li>
+										<li>Researched content for outbound social media posts.</li>
+										<li>Created Social Content Database to optimally manage and organize the social program.</li>
+										<li>Created graphics and designs for social media platforms and presentations.</li>
+										<li>Maintained the company’s website; adding features to increase online engagement.</li>
+										<li>Designed and programmed interactive gaming element for Fannie Mae event.</li>
+
 									</ul>
 								</span>
 							</div>
