Added teksystems to experience

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 								</span>
 							</div>
 						</div>
+						<div class="divider"></div>
 						<div class="row">
 							<img src="images/university-of-maryland-logo.png" alt="University of Maryland logo">
 							<div class="brief">
@@ -148,25 +149,29 @@
 
 					</aside>
 					<aside class="experience tab-content"  id="experience">
-						<!-- <div class="row">
+						<div class="row">
 							<br>
 							<br>
 							<br>
 							<img class="tekLogo" src="images/TEK.png" alt="TEKsystems Logo" /><br>
 							<div class="brief">
 
-								<span class="company-name">Web Developer<br>February 2017 - Current</span>
+								<span class="company-name">Web Developer<br>February 2017 - August 2018</span>
 								<span class="position">
 									<br>
 									<ul>
-										<li>Develop and optimize new user-facing features.</li>
-										<li>Build re-usable code and libraries for future use.</li>
-										<li>Ensure technical feasibility of UI/UX designs.</li>
-										<li>Optimize applications for maximum speed and scalability.</li>
+										<li>Provided services for the Allegis Group’s over 10 family of companies.
+										<li>Worked collaboratively as part of a multi-faceted agile team including other developers, designers, videographers and management.</li>
+										<li>Utilized Adobe Creative Suite for designing graphics, altering audio and videos for a multitude of platforms.</li>
+										<li>Designed, developed and maintained interactive web pages to meet the varying needs of our clients. Ensuring pages are responsive and compatible in all major browsers.</li>
+										<li>Programmed in HTML, CSS, JavaScript, jQuery, ReactJS and Sass.</li>
+										<li>Designed and Developed dynamic eLearning solutions to educate internal audiences. Work closely with the Instructional Designers to ensure information is accurate and that their needs have been met. </li>
+										<li>Created web-based training assets and courses that incorporated graphics, animations, videos, simulations, assessments, interactivity and games.</li>
+										<li>Utilized development tools to create top-notch courses: Composica, Articulate 360 and Adobe Captivate.</li>
 									</ul>
 								</span>
 							</div>
-						</div> -->
+						</div>
 
 						<div class="row">
 							<br>
@@ -191,7 +196,7 @@
 							<img src="images/montage.png" alt="Montage Marketing Group Logo" /><br>
 							<div class="brief">
 								<br>
-								<span class="company-name">Marketing Consultant<br> July 2015 – Current</span>
+								<span class="company-name">Marketing Consultant<br> July 2015 – February 2016</span>
 								<span class="position">
 									<br>
 									<ul>
