--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta charset="utf-8">
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
-	<link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css/scss">
 	<link rel="stylesheet" href="stylesheets/animate.css">
 	<link rel="stylesheet" href="stylesheets/Audrey-Normal.css">
 	<link rel="stylesheet" href="fonts/Audrey-Normal.css">
@@ -13,11 +12,11 @@
 	<link rel="stylesheet" href="bitIcon/style.css">
 	<link rel="stylesheet" href="bitIcon/variables.scss" type="text/css/scss">
 	<link rel="stylesheet" href="haml/haml.css">
-
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="stylesheets/jquery.bxslider.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Arapey|Bitter|Cutive|Cutive+Mono|Gravitas+One|Inconsolata|Josefin+Sans|Muli|Open+Sans|Petit+Formal+Script|Playfair+Display|Pontano+Sans|Prata|Raleway|Roboto|Roboto+Mono|Rubik|Sacramento|Source+Code+Pro|Vidaloka" rel="stylesheet">
+
 	<link rel="stylesheet" type="text/css" href="https://tympanus.net/Tutorials/CircleHoverEffects/css/common.css"/>
 	<link rel="stylesheet" type="text/css" href="https://tympanus.net/Tutorials/CircleHoverEffects/css/style.css"/>
 	<link red="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
@@ -48,8 +47,8 @@
 })(window,document,'script','dataLayer','GTM-PXCWVZ');</script>
 <!-- End Google Tag Manager -->
 
-<meta property="og:image" content="[url to image]" />
-<meta property="og:title" content="[page name]" />
+<!-- <meta property="og:image" content="[url to image]" />
+<meta property="og:title" content="[page name]" /> -->
 <meta property="og:description" content="[content description]" />
 <meta property="og:site_name" content="Farishta Haider's Portfolio"/>
 <meta property="og:title" content="Welcome to the wonderful world of Farishta Haider"/>
@@ -118,7 +117,7 @@
 						<p>Hello, my name is <strong>Farishta Haider</strong>.</br>
 							A <strong>Full-Stack Developer</strong> with a strong background in <strong> Marketing </strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
 							<div class="links scrollflow">
-								<a href="https://drive.google.com/file/d/1lc165fr8hS8StfYGYCQB9FKn1gB-ouC2/view?usp=sharing" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
+								<a href="https://drive.google.com/file/d/1lc165fr8hS8StfYGYCQB9FKn1gB-ouC2/view?usp=sharing" target="_blank" class="button"><i class="fas fa-file-alt"></i> View Resume</a>
 								<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-paper-plane"></i> Hire Me</a>
 							</div>
 						</div>
@@ -861,7 +860,7 @@
 			<div class="copy">© Copyright 2018 Farishta Haider</div>
 		</div>
 	</section>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script type="text/javascript" src="javascripts/modernizr.custom.js"></script>
 		<script type="text/javascript" src="javascripts/script.js"></script>
 		<script type="text/javascript" src="javascripts/html5shiv-printshiv.js"></script>
@@ -870,4 +869,4 @@
 		<script type="text/javascript" src="javascripts/jquery.easing.1.3.js"></script>
 		<script type="text/javascript" src="javascripts/jquery.bxslider.min.js"></script>
 	</body>
-	</html>
+</html>
