--- a/resume.html
+++ b/resume.html
@@ -244,7 +244,7 @@
 	  </div>
 
 	</div>
-<footer> <span class="copy">© </span>Copyright 2018 Farishta Haider</footer>
+<!-- <footer> <span class="copy">© </span>Copyright 2018 Farishta Haider</footer> -->
 
 
 
