Changed resumes and added tooltip

--- a/resume.html
+++ b/resume.html
@@ -53,8 +53,11 @@
 		<!-- End Google Tag Manager (noscript) -->
 
 	<div class="menu">
-		<div class="menu-bg">
-			<a href="https://drive.google.com/file/d/1g2OZgTdz0ihKgTkLPFCpX9mgnuweO28j/view?usp=sharing" target="_blank"><i class="fa fa-print"></i></a>
+		<div class="menu-bg"  tooltip="Download Resume" flow="left">
+			<span>
+				<a href="https://drive.google.com/open?id=12cPWTzQMLdZh6wj8IYooALBcN1ndV3U0" target="_blank" ><i class="fa fa-print"></i>
+				</a>
+			</span>
 		</div>
 	</div>
 
@@ -104,8 +107,11 @@
             <li>Ruby On Rails</li>
             <li>ReactJS</li>
             <li>AngularJS</li>
+						<li>PHP</li>
             <li>Sass</li>
+						<li>mySQL</li>
             <li>PostgreSQL</li>
+
           </ul>
         </div>
         <div class="section hardSkills">
