--- a/index.html
+++ b/index.html
@@ -117,8 +117,11 @@
 						<p>Hello, my name is <strong>Farishta Haider</strong>.</br>
 							A <strong>Full-Stack Developer</strong> with a strong background in <strong> Marketing </strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
 							<div class="links scrollflow">
+								<div class="contact-info">
+
 								<a href="resume.html" target="_blank" class="button"><i class="fas fa-file-alt"></i> View Resume</a>
 								<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-paper-plane"></i> Hire Me</a>
+							</div>
 							</div>
 						</div>
 					</aside>
