More responsive updates

--- a/test.html
+++ b/test.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="favicon.ico" />
-	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
+	<!-- <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css"> -->
+		<link href="stylesheets/style.css" media="screen, projection" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="stylesheets/animate.css">
 	<link rel="stylesheet" href="stylesheets/Audrey-Normal.css">
 	<link rel="stylesheet" href="fonts/Audrey-Normal.css">
@@ -710,7 +711,7 @@
 						</div>
 						<div id="4" class="pop">
 							<button class="gal_btn" data-index="4">✖</button>
-							<h6>General Assembly<br>WDI Yearbook</h6>
+							<h6>General Assembly WDI Yearbook</h6>
 							<div class="techUsed">
 								<h3> <strong>TECH:</strong> HTML <strong> | </strong> CSS <strong> | </strong> JAVASCRIPT <strong> | </strong> RUBY ON RAILS</h3>
 							</div>
