Adding more responsiveness to the resume.html

--- a/resume.html
+++ b/resume.html
@@ -250,7 +250,7 @@
 	  </div>
 
 	</div>
-<!-- <footer> <span class="copy">© </span>Copyright 2018 Farishta Haider</footer> -->
+<footer> <span class="copy">© </span>Copyright 2018 Farishta Haider</footer>
 
 
 
