added @ sign to email

--- a/resume.html
+++ b/resume.html
@@ -70,7 +70,7 @@
     <div class="email">
       <a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com">
         <i class="far fa-envelope"></i>
-        farishta.haider@gmail.com
+        farishta.haider<span>@</span>gmail.com
 			</a>
     </div>
     <div class="tel">
