added @ sign to email

--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
 		<div class="holder">
 			<div class="title scrollflow -slide-top -opacity"><h2>Contact Me</h2></div>
 			<div class="contact-info">
-				<div class="mail"><a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com"><i class="fa fa-envelope"></i> farishta.haider@gmail.com</a></div>
+				<div class="mail"><a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com"><i class="fa fa-envelope"></i> farishta.haider<span>@</span>gmail.com</a></div>
 				<div class="tel"><a href="tel:301-509-2483"><i class="fa fa-mobile"></i>301 - 509 - 2483</a></div>
 			</div>
 			<div class="social">
